# colmap

src/: CMakeLists.txt
src/base/: image_reader.h  reconstruction.cc  reconstruction.h
src/controllers/: automatic_reconstruction.h  incremental_mapper.cc
src/estimators/: pose.cc  two_view_geometry_test.cc
src/good_graph/: CMakeLists.txt  stats.h  types.h
src/gtsfm/: CMakeLists.txt  export_camera_specs.cpp  test_exif_read.cpp
src/optim/: bundle_adjustment.h
src/sfm/: incremental_mapper.cc  incremental_mapper.h
src/util/: bitmap.cc  bitmap.h  timer.cc  timer.h
